<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>astra_pro_ros2</name>
  <version>0.0.0</version>
  <description>Orbbec Astra Pro ROS2 integration</description>
  <maintainer email="agvhoteleiro@gmail.com">root</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependências de build (ferramentas externas) -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>  <!-- Para encontrar bibliotecas via pkg-config -->

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv4</depend>

  <!-- Dependências do sistema (bibliotecas necessárias) -->
  <depend>libsfml-dev</depend>   <!-- SFML (se a Astra SDK usa gráficos/multimídia) -->
  <depend>libudev-dev</depend>   <!-- Para acesso USB (comum em drivers de câmera) -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
